worked on dashboard

--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5",
+    "three": "^0.179.1",
     "uuid": "^11.1.0",
+    "vanta": "^0.5.24",
     "zod": "^3.24.4"
   },
   "devDependencies": {
@@ -70,6 +72,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-window": "^1.8.8",
+    "@types/three": "^0.178.1",
     "@typescript-eslint/eslint-plugin": "^8.36.0",
     "@typescript-eslint/parser": "^8.36.0",
     "@vitejs/plugin-react-swc": "^3.9.0",
