--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "firebase": "^11.7.1",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
+    "ldrs": "^1.1.7",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.2.0",
     "lucide-react": "^0.508.0",
